k8s/llm-server/service_web-ui-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui-server-service # Adjust service name as needed
spec:
  type: LoadBalancer  # Web-UI will be using LoadBalancer
  selector:
    app: web-ui-server
  ports:
  - name: http
    port: 8080 # Adjust port as needed
    targetPort: 8080 # Adjust port as needed
    protocol: TCP
